# eventd-plugin-fedmsg

./: CMakeLists.txt  README.md
man/: CMakeLists.txt  config.ent.in  eventd-fedmsg.conf.xml  eventd-fedmsg.event.xml
src/: CMakeLists.txt  fedmsg.c
